# orcheo-plugin-wecom-listener

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/orcheo_plugin_wecom_listener/: __init__.py  orcheo_plugin.toml
tests/: test_plugin.py
